
/**
 * Représente les différents états possibles d'une transaction de paiement.
 */
public enum StatutPaiement {
    EN_ATTENTE,
    REUSSI,
    ECHOUE,
    REMBOURSE
}