@startuml Class_GestionInscription
skinparam shadowing false
skinparam roundCorner 8
skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam class {
  BackgroundColor #EAF2F8
  BorderColor #2E4053
  ArrowColor #2E4053
  FontColor #1B2631
}
skinparam enum {
  BackgroundColor #FDEBD0
  BorderColor #D4AC0D
}

title Diagramme de Classes — Gestion des Inscriptions

class Etudiant {
  - idEtudiant : String
  - nom : String
  - prenom : String
  - dateNaissance : Date
  - email : String
  - telephone : String
  - motDePasse : String
  --
  + seConnecter(email : String, motDePasse : String) : boolean
  + creerDossier() : DossierInscription
  + consulterStatut(idDossier : String) : String
  + annulerInscription(idDossier : String) : boolean
}

class AgentScolarite {
  - idAgent : String
  - nom : String
  - prenom : String
  - email : String
  --
  + seConnecter(email : String, motDePasse : String) : boolean
  + validerDossier(idDossier : String) : void
  + rejeterDossier(idDossier : String, motif : String) : void
  + consulterDossiersEnAttente() : List<DossierInscription>
}

class DossierInscription {
  - idDossier : String
  - dateCreation : Date
  - statut : StatutDossier
  - piecesJustificatives : List<String>
  - typeInscription : String
  - motifRejet : String
  --
  + creerDossier() : void
  + ajouterPiece(piece : String) : void
  + validerDossier() : void
  + rejeterDossier(motif : String) : void
  + consulterStatut() : String
  + mettreAJourStatut(statut : StatutDossier) : void
}

class Formation {
  - codeFormation : String
  - libelle : String
  - niveau : String
  - fraisInscription : Double
  - placesDisponibles : int
  --
  + consulterDetails() : String
  + verifierDisponibilite() : boolean
}

class Paiement {
  - idPaiement : String
  - montant : Double
  - referenceTransaction : String
  - modePaiement : String
  - datePaiement : Date
  - statut : StatutPaiement
  --
  + effectuerTransaction() : boolean
  + genererRecu() : String
}

class NotificationEmail {
  - idNotification : String
  - destinataire : String
  - objet : String
  - contenu : String
  - dateEnvoi : Date
  --
  + envoyer() : boolean
}

enum StatutDossier {
  EN_COURS
  EN_ATTENTE_VALIDATION
  VALIDE
  REJETE
  ANNULE
}

enum StatutPaiement {
  EN_ATTENTE
  REUSSI
  ECHOUE
  REMBOURSE
}

Etudiant "1" -- "0..*" DossierInscription : possède >
AgentScolarite "1" -- "0..*" DossierInscription : valide / vérifie >
DossierInscription "1..*" -- "1" Formation : concerne >
DossierInscription "1" -- "1" Paiement : effectue >
DossierInscription "1" -- "0..*" NotificationEmail : génère >
DossierInscription "1" *-- "1" StatutDossier
Paiement "1" *-- "1" StatutPaiement

@enduml
